reformat, coverage are let to sbt