@@ -22,10 +22,6 @@
 
     <properties>
 
-        <compiler.maxpermsize>256m</compiler.maxpermsize>
-
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
         <scala.binary.version>2.10</scala.binary.version>
         <scala.version>${scala.binary.version}.4</scala.version>
 
@@ -36,10 +32,6 @@
         <!-- Logging -->
         <log4j.version>1.2.16</log4j.version>
         <slf4j.version>1.7.3</slf4j.version>
-
-        <!-- OSGi -->
-        <maven-bundle-plugin.version>2.5.0</maven-bundle-plugin.version>
-        <karaf.version>2.3.0</karaf.version>
 
         <!-- Test dependencies -->
         <specs2.version>2.3.10</specs2.version>
@@ -214,174 +206,6 @@
     </dependencyManagement>
 
 
-    <profiles>
-
-        <profile>
-            <id>scaladoc</id>
-            <build>
-                <pluginManagement>
-                    <plugins>
-
-                        <plugin>
-                            <groupId>net.alchim31.maven</groupId>
-                            <artifactId>scala-maven-plugin</artifactId>
-
-                            <executions>
-
-                                <execution>
-                                    <id>scala-docjar</id>
-                                    <phase>package</phase>
-                                    <goals>
-                                        <goal>doc-jar</goal>
-                                    </goals>
-                                </execution>
-
-                                <execution>
-                                    <id>scala-doc</id>
-                                    <phase>compile</phase>
-                                    <goals>
-                                        <goal>doc</goal>
-                                    </goals>
-                                </execution>
-
-                            </executions>
-
-                        </plugin>
-
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
-
-        <!-- profile for the coverate report -->
-        <profile>
-
-            <id>coverage</id>
-
-            <properties>
-                <scoverage-plugin.version>0.98.2</scoverage-plugin.version>
-            </properties>
-
-            <dependencies>
-                <dependency>
-                    <groupId>org.scoverage</groupId>
-                    <artifactId>scalac-scoverage-plugin_${scala.binary.version}</artifactId>
-                    <version>${scoverage-plugin.version}</version>
-                </dependency>
-            </dependencies>
-
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>net.alchim31.maven</groupId>
-                            <artifactId>scala-maven-plugin</artifactId>
-
-                            <executions>
-                                <execution>
-                                    <id>compile</id>
-                                    <goals>
-                                        <goal>add-source</goal>
-                                        <goal>compile</goal>
-                                    </goals>
-                                    <configuration>
-                                        <args>
-                                            <arg>-g:vars</arg>
-                                            <arg>-Yrangepos</arg>
-                                            <arg>-P:scoverage:dataDir:${coverage.data.dir}</arg>
-                                        </args>
-                                        <compilerPlugins>
-                                            <compilerPlugin>
-                                                <groupId>org.scoverage</groupId>
-                                                <artifactId>scalac-scoverage-plugin_${scala.binary.version}</artifactId>
-                                                <version>${scoverage-plugin.version}</version>
-                                            </compilerPlugin>
-                                        </compilerPlugins>
-                                    </configuration>
-                                </execution>
-
-                                <execution>
-                                    <id>test</id>
-                                    <goals>
-                                        <goal>add-source</goal>
-                                        <goal>testCompile</goal>
-                                    </goals>
-                                </execution>
-                            </executions>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.scoverage</groupId>
-                            <artifactId>maven-scoverage-plugin</artifactId>
-                            <version>${scoverage-plugin.version}</version>
-                            <executions>
-                                <execution>
-                                    <id>verify</id>
-                                    <goals>
-                                        <goal>report</goal>
-                                    </goals>
-                                </execution>
-                            </executions>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-
-            </build>
-        </profile>
-
-        <profile>
-            <id>reformat</id>
-
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.scalariform</groupId>
-                            <artifactId>scalariform-maven-plugin</artifactId>
-                            <version>0.1.4</version>
-                            <executions>
-                                <execution>
-                                    <phase>process-sources</phase>
-                                    <goals>
-                                        <goal>format</goal>
-                                    </goals>
-                                    <configuration>
-                                        <alignParameters>true</alignParameters>
-                                        <alignSingleLineCaseStatements>true</alignSingleLineCaseStatements>
-                                        <alignSingleLineCaseStatements_maxArrowIndent>40
-                                        </alignSingleLineCaseStatements_maxArrowIndent>
-                                        <compactControlReadability>true</compactControlReadability>
-                                        <compactStringConcatenation>false</compactStringConcatenation>
-                                        <doubleIndentClassDeclaration>true</doubleIndentClassDeclaration>
-                                        <formatXml>true</formatXml>
-                                        <indentLocalDefs>false</indentLocalDefs>
-                                        <indentPackageBlocks>true</indentPackageBlocks>
-                                        <indentSpaces>2</indentSpaces>
-                                        <indentWithTabs>false</indentWithTabs>
-                                        <multilineScaladocCommentsStartOnFirstLine>false
-                                        </multilineScaladocCommentsStartOnFirstLine>
-                                        <preserveDanglingCloseParenthesis>true</preserveDanglingCloseParenthesis>
-                                        <placeScaladocAsterisksBeneathSecondAsterisk>true
-                                        </placeScaladocAsterisksBeneathSecondAsterisk>
-                                        <preserveSpaceBeforeArguments>false</preserveSpaceBeforeArguments>
-                                        <rewriteArrowSymbols>false</rewriteArrowSymbols>
-                                        <spaceBeforeColon>false</spaceBeforeColon>
-                                        <spaceInsideBrackets>false</spaceInsideBrackets>
-                                        <spaceInsideParentheses>false</spaceInsideParentheses>
-                                        <spacesWithinPatternBinders>true</spacesWithinPatternBinders>
-
-
-                                    </configuration>
-                                </execution>
-                            </executions>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-
-            </build>
-
-        </profile>
-
-    </profiles>
 
     <build>
 
@@ -492,76 +316,6 @@
                     <argLine>-Xms64m -Xmx1024m -XX:MaxPermSize=512m</argLine>
                     <useFile>false</useFile>
                 </configuration>
-            </plugin>
-
-
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <version>${maven-bundle-plugin.version}</version>
-                <configuration>
-                    <instructions>
-                        <Bundle-Name>${project.name}</Bundle-Name>
-                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Bundle-Vendor>${project.organization.name}</Bundle-Vendor>
-                    </instructions>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>cleanVersions</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>cleanVersions</goal>
-                        </goals>
-                        <configuration>
-                            <versions>
-                                <karaf.osgi.version>${karaf.version}</karaf.osgi.version>
-                            </versions>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!-- tests execution -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.16</version>
-                <configuration>
-                    <includes>
-                        <include>**/*Spec.*</include>
-                    </includes>
-                    <argLine>-Xms64m -Xmx1024m -XX:MaxPermSize=512m</argLine>
-                    <useFile>false</useFile>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
 
         </plugins>
